# FmodDemo

./: .gitignore  README.md
app/: .gitignore  CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: common.h  play_sound.cpp
app/src/main/java/org/fmod/example/: MainActivity.java
gradle/wrapper/: gradle-wrapper.properties
